# tomark

./: .gitignore  CONTRIB.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: python-wf.yml
tomark/: test_tomark.py  tomark.py
